force-app/main/default/objects/Quote/fields/AdditionalAgreements__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAgreements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Agreements</label>
    <type>Checkbox</type>
</CustomField>