force-app/main/default/objects/Quote/fields/AdditionalDiscounOnBaseComponent__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDiscounOnBaseComponent__c</fullName>
    <label>Additional discount on base component</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>