force-app/main/default/objects/Quote/fields/AdditionalDiscountOnAccessories__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDiscountOnAccessories__c</fullName>
    <label>Additional discount on accessories</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>