force-app/main/default/objects/Quote/fields/AdditionalDiscountOnBaseMachine__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDiscountOnBaseMachine__c</fullName>
    <label>Additional discount on base machine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>