force-app/main/default/objects/Quote/fields/ApprovalLevel__c.field-meta.xml
<CustomField>
    <fullName>ApprovalLevel__c</fullName>
    <label>Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Lead</fullName>
            </value>
            <value>
                <fullName>National Sales Lead</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>