force-app/main/default/objects/Quote/fields/ApprovalProcessSkipped__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcessSkipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Process Skipped</label>
    <type>Checkbox</type>
</CustomField>