force-app/main/default/objects/Quote/fields/BrandDisplayLocation__c.field-meta.xml
<CustomField>
    <fullName>BrandDisplayLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Display: Location</label>
    <type>Checkbox</type>
</CustomField>