force-app/main/default/objects/Quote/fields/BrandDisplayMenu__c.field-meta.xml
<CustomField>
    <fullName>BrandDisplayMenu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Display: Menu</label>
    <type>Checkbox</type>
</CustomField>