force-app/main/default/objects/Quote/fields/BrandDisplayTable__c.field-meta.xml
<CustomField>
    <fullName>BrandDisplayTable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Display: Table</label>
    <type>Checkbox</type>
</CustomField>