force-app/main/default/objects/Quote/fields/CoffeeRefundBasis__c.field-meta.xml
<CustomField>
    <fullName>CoffeeRefundBasis__c</fullName>
    <label>Coffee Refund Basis</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>