force-app/main/default/objects/Quote/fields/CountApprovalLevel__c.field-meta.xml
<CustomField>
    <fullName>CountApprovalLevel__c</fullName>
    <label>Count Approval Level</label>
    <summaryFilterItems>
        <field>QuoteLineItem.ApprovalLevel__c</field>
        <operation>equals</operation>
        <value>VL, NVL, Vorstand</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>