force-app/main/default/objects/Quote/fields/CustomEmailText__c.field-meta.xml
<CustomField>
    <fullName>CustomEmailText__c</fullName>
    <label>Custom Email Text</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>