force-app/main/default/objects/Quote/fields/CustomSugarPrintingDetails__c.field-meta.xml
<CustomField>
    <fullName>CustomSugarPrintingDetails__c</fullName>
    <label>Custom Sugar Printing Details</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>