force-app/main/default/objects/Quote/fields/CustomSugarPrintingOffered__c.field-meta.xml
<CustomField>
    <fullName>CustomSugarPrintingOffered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Sugar Printing Offered</label>
    <type>Checkbox</type>
</CustomField>