force-app/main/default/objects/Quote/fields/DigitalWayOfOrdering__c.field-meta.xml
<CustomField>
    <fullName>DigitalWayOfOrdering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Way of Ordering</label>
    <type>Checkbox</type>
</CustomField>