force-app/main/default/objects/Quote/fields/DiscountBaseDiscountCoffee__c.field-meta.xml
<CustomField>
    <fullName>DiscountBaseDiscountCoffee__c</fullName>
    <label>Discount: Base Discount Coffee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>