force-app/main/default/objects/Quote/fields/DiscountBaseDiscountHotChocolate__c.field-meta.xml
<CustomField>
    <fullName>DiscountBaseDiscountHotChocolate__c</fullName>
    <label>Discount: Base Discount Hot Chocolate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>