force-app/main/default/objects/Quote/fields/DiscountBaseDiscountOther__c.field-meta.xml
<CustomField>
    <fullName>DiscountBaseDiscountOther__c</fullName>
    <label>Discount: Base Discount Other</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>