force-app/main/default/objects/Quote/fields/DiscountBaseDiscountTea__c.field-meta.xml
<CustomField>
    <fullName>DiscountBaseDiscountTea__c</fullName>
    <label>Discount: Base Discount Tea</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>