force-app/main/default/objects/Quote/fields/DiscountBrandRepresentationMenu__c.field-meta.xml
<CustomField>
    <fullName>DiscountBrandRepresentationMenu__c</fullName>
    <label>Discount: Brand representation: Menu</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>