force-app/main/default/objects/Quote/fields/DiscountBrandRepresentationOnSite__c.field-meta.xml
<CustomField>
    <fullName>DiscountBrandRepresentationOnSite__c</fullName>
    <label>Discount: Brand representation: On Site</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>