force-app/main/default/objects/Quote/fields/DiscountBrandRepresentationTable__c.field-meta.xml
<CustomField>
    <fullName>DiscountBrandRepresentationTable__c</fullName>
    <label>Discount: Brand Representation: Table</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>