force-app/main/default/objects/Quote/fields/DiscountDigitalOrdering__c.field-meta.xml
<CustomField>
    <fullName>DiscountDigitalOrdering__c</fullName>
    <label>Discount: Digital Ordering</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>