force-app/main/default/objects/Quote/fields/DiscountIndexCondition__c.field-meta.xml
<CustomField>
    <fullName>DiscountIndexCondition__c</fullName>
    <label>Discount: Index Condition</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>