force-app/main/default/objects/Quote/fields/DiscountPurchaseQuantityCoffee__c.field-meta.xml
<CustomField>
    <fullName>DiscountPurchaseQuantityCoffee__c</fullName>
    <label>Discount: Purchase Quantity Coffee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>