force-app/main/default/objects/Quote/fields/DiscountPurchaseQuantityHotChocolate__c.field-meta.xml
<CustomField>
    <fullName>DiscountPurchaseQuantityHotChocolate__c</fullName>
    <label>Discount: Purchase Quantity Hot Choc</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>