force-app/main/default/objects/Quote/fields/DiscountPurchaseQuantityOther__c.field-meta.xml
<CustomField>
    <fullName>DiscountPurchaseQuantityOther__c</fullName>
    <label>Discount: Purchase Quantity Other</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>