force-app/main/default/objects/Quote/fields/DiscountPurchaseQuantityTea__c.field-meta.xml
<CustomField>
    <fullName>DiscountPurchaseQuantityTea__c</fullName>
    <label>Discount: Purchase Quantity Tea</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>