force-app/main/default/objects/Quote/fields/DiscountSimulatedDiscount__c.field-meta.xml
<CustomField>
    <fullName>DiscountSimulatedDiscount__c</fullName>
    <label>Discount: Simulated Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>