force-app/main/default/objects/Quote/fields/DiscountSimulatedGrowth__c.field-meta.xml
<CustomField>
    <fullName>DiscountSimulatedGrowth__c</fullName>
    <label>Discount: Simulated Growth</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>