force-app/main/default/objects/Quote/fields/DiscountVariousCoffeeAccessories__c.field-meta.xml
<CustomField>
    <fullName>DiscountVariousCoffeeAccessories__c</fullName>
    <label>Discount: Various Coffee Accessories</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>