force-app/main/default/objects/Quote/fields/DiscountVariousDrinkingChocolates__c.field-meta.xml
<CustomField>
    <fullName>DiscountVariousDrinkingChocolates__c</fullName>
    <label>Discount: Various Drinking Chocolates</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>