force-app/main/default/objects/Quote/fields/DiscountVariousMiscellaneousItems__c.field-meta.xml
<CustomField>
    <fullName>DiscountVariousMiscellaneousItems__c</fullName>
    <label>Discount: Various Miscellaneous items</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>