force-app/main/default/objects/Quote/fields/DiscountVariousTeaItems__c.field-meta.xml
<CustomField>
    <fullName>DiscountVariousTeaItems__c</fullName>
    <label>Discount: Various Tea Items</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>