force-app/main/default/objects/Quote/fields/DishSales__c.field-meta.xml
<CustomField>
    <fullName>DishSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dish Sales</label>
    <type>Checkbox</type>
</CustomField>