force-app/main/default/objects/Quote/fields/DocumentTitleHelper__c.field-meta.xml
<CustomField>
    <fullName>DocumentTitleHelper__c</fullName>
    <formula>Opportunity.Account.Name&amp; &quot;-&quot; &amp;QuoteNumber</formula>
    <label>Document Title Helper</label>
    <type>Text</type>
</CustomField>