force-app/main/default/objects/Quote/fields/DocumentTitleHelperRKV__c.field-meta.xml
<CustomField>
    <fullName>DocumentTitleHelperRKV__c</fullName>
    <formula>Opportunity.Account.Name&amp; &quot; - RKV - &quot; &amp;QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Title Helper RKV</label>
    <type>Text</type>
</CustomField>