force-app/main/default/objects/Quote/fields/DraftApproved__c.field-meta.xml
<CustomField>
    <fullName>DraftApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft Approved</label>
    <type>Checkbox</type>
</CustomField>