force-app/main/default/objects/Quote/fields/DraftHelper__c.field-meta.xml
<CustomField>
    <fullName>DraftHelper__c</fullName>
    <formula>&quot;ENTWURF&quot;</formula>
    <label>Draft Helper</label>
    <type>Text</type>
</CustomField>