force-app/main/default/objects/Quote/fields/DynamicListLookupAccount__c.field-meta.xml
<CustomField>
    <fullName>DynamicListLookupAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ein Lookup zu Account um ein Dynamiclist in Account Pagelayout zu erstellen zu können
Wird durch den Flow:xy beim Erstellung von Quote befüllt</description>
    <label>Dynamic List Lookup Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>