force-app/main/default/objects/Quote/fields/HighestPossibleTeaDiscount__c.field-meta.xml
<CustomField>
    <fullName>HighestPossibleTeaDiscount__c</fullName>
    <label>Highest Possible Tea Discount (€)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>