force-app/main/default/objects/Quote/fields/HighestPriceCoffeeProducts__c.field-meta.xml
<CustomField>
    <fullName>HighestPriceCoffeeProducts__c</fullName>
    <label>Highest Price: Coffee Products</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductGroup__c</field>
        <operation>equals</operation>
        <value>Röstkaffee</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>