force-app/main/default/objects/Quote/fields/HighestPriceHotChocProducts__c.field-meta.xml
<CustomField>
    <fullName>HighestPriceHotChocProducts__c</fullName>
    <label>Highest Price: Hot Chocolate Products</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductGroup__c</field>
        <operation>equals</operation>
        <value>Trinkschokolade</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>