force-app/main/default/objects/Quote/fields/InitialReview__c.field-meta.xml
<CustomField>
    <fullName>InitialReview__c</fullName>
    <label>Initial Review</label>
    <type>Date</type>
</CustomField>