force-app/main/default/objects/Quote/fields/InstPurchaseAgreementValidUntil__c.field-meta.xml
<CustomField>
    <fullName>InstPurchaseAgreementValidUntil__c</fullName>
    <label>Inst. Purchase Agreement Valid Until</label>
    <type>Date</type>
</CustomField>