force-app/main/default/objects/Quote/fields/InterestOnOutstandingPrice__c.field-meta.xml
<CustomField>
    <fullName>InterestOnOutstandingPrice__c</fullName>
    <label>Interest on outstanding price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>