force-app/main/default/objects/Quote/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1x</fullName>
            </value>
            <value>
                <fullName>2x</fullName>
            </value>
            <value>
                <fullName>3x</fullName>
            </value>
            <value>
                <fullName>4x</fullName>
            </value>
            <value>
                <fullName>5x</fullName>
            </value>
            <value>
                <fullName>6x</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>