force-app/main/default/objects/Quote/fields/IsMachineOffer__c.field-meta.xml
<CustomField>
    <fullName>IsMachineOffer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Machine Offer?</label>
    <type>Checkbox</type>
</CustomField>