force-app/main/default/objects/Quote/fields/KAMApprovalHelper__c.field-meta.xml
<CustomField>
    <fullName>KAMApprovalHelper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KAM Approval Helper</label>
    <type>Checkbox</type>
</CustomField>