force-app/main/default/objects/Quote/fields/Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Lifetime__c</fullName>
    <label>Lifetime</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>