force-app/main/default/objects/Quote/fields/LinkedMachineOffer__c.field-meta.xml
<CustomField>
    <fullName>LinkedMachineOffer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Machine Offer</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>