force-app/main/default/objects/Quote/fields/LowestPriceCoffeeProducts__c.field-meta.xml
<CustomField>
    <fullName>LowestPriceCoffeeProducts__c</fullName>
    <label>Lowest Price Coffee Products</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductGroup__c</field>
        <operation>equals</operation>
        <value>Röstkaffee</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.UnitPrice</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>