force-app/main/default/objects/Quote/fields/LowestPriceHotChocProducts__c.field-meta.xml
<CustomField>
    <fullName>LowestPriceHotChocProducts__c</fullName>
    <label>Lowest Price Hot Choc Products</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductGroup__c</field>
        <operation>equals</operation>
        <value>Trinkschokolade</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.UnitPrice</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>