force-app/main/default/objects/Quote/fields/Machine_SEPAIBAN__c.field-meta.xml
<CustomField>
    <fullName>Machine_SEPAIBAN__c</fullName>
    <label>IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>