force-app/main/default/objects/Quote/fields/MachineCustomerDiscountTotalInEuro__c.field-meta.xml
<CustomField>
    <fullName>MachineCustomerDiscountTotalInEuro__c</fullName>
    <label>Machine Customer Discount Total in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>