force-app/main/default/objects/Quote/fields/MachineCustomerDiscountTotalPercent__c.field-meta.xml
<CustomField>
    <fullName>MachineCustomerDiscountTotalPercent__c</fullName>
    <label>Machine Customer Discount Total Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>