force-app/main/default/objects/Quote/fields/MachineDepositMustBePaidUntil__c.field-meta.xml
<CustomField>
    <fullName>MachineDepositMustBePaidUntil__c</fullName>
    <label>Deposit must be paid until</label>
    <type>Date</type>
</CustomField>