force-app/main/default/objects/Quote/fields/MachineDirectDebitCollectionDay1or15__c.field-meta.xml
<CustomField>
    <fullName>MachineDirectDebitCollectionDay1or15__c</fullName>
    <label>Direct Debit Collection Day (1st/15th)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <default>true</default>
                <label>01</label>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>