force-app/main/default/objects/Quote/fields/MachineDownpaymentBeforeOrAfterOrder__c.field-meta.xml
<CustomField>
    <fullName>MachineDownpaymentBeforeOrAfterOrder__c</fullName>
    <label>Downpayment before or after order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>before</fullName>
            </value>
            <value>
                <fullName>after</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>