force-app/main/default/objects/Quote/fields/MachineDownpaymentPercent__c.field-meta.xml
<CustomField>
    <fullName>MachineDownpaymentPercent__c</fullName>
    <label>Downpayment Percent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>