force-app/main/default/objects/Quote/fields/MachineFinalRateInEuro__c.field-meta.xml
<CustomField>
    <fullName>MachineFinalRateInEuro__c</fullName>
    <label>Final Rate In Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>