force-app/main/default/objects/Quote/fields/MachineFinancingChargePerKG__c.field-meta.xml
<CustomField>
    <fullName>MachineFinancingChargePerKG__c</fullName>
    <formula>( MachineInterestRates__c  -  MachineRoasterDiscountTotalInEuro__c ) /  MachineSalesExpectationCoffee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financing Charge per kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>