force-app/main/default/objects/Quote/fields/MachineGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>MachineGrossAmount__c</fullName>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>