force-app/main/default/objects/Quote/fields/MachineHandoverCase__c.field-meta.xml
<CustomField>
    <fullName>MachineHandoverCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handover Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>