force-app/main/default/objects/Quote/fields/MachineHandoverToMachineTeam__c.field-meta.xml
<CustomField>
    <fullName>MachineHandoverToMachineTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handover to Machine Team Done</label>
    <type>Checkbox</type>
</CustomField>