force-app/main/default/objects/Quote/fields/MachineInterestRates__c.field-meta.xml
<CustomField>
    <fullName>MachineInterestRates__c</fullName>
    <formula>MachineTotalFinancingAmount__c  * 0.09 *  MachineRuntimeInMonths__c  / 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Machine Interest Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>