force-app/main/default/objects/Quote/fields/MachineLocation__c.field-meta.xml
<CustomField>
    <fullName>MachineLocation__c</fullName>
    <label>Machine Location</label>
    <type>TextArea</type>
</CustomField>