force-app/main/default/objects/Quote/fields/MachineMachineAccountBalance__c.field-meta.xml
<CustomField>
    <fullName>MachineMachineAccountBalance__c</fullName>
    <label>Machine Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>