force-app/main/default/objects/Quote/fields/MachineMarkup__c.field-meta.xml
<CustomField>
    <fullName>MachineMarkup__c</fullName>
    <label>Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>