force-app/main/default/objects/Quote/fields/MachineMerchandiseAccountBalance__c.field-meta.xml
<CustomField>
    <fullName>MachineMerchandiseAccountBalance__c</fullName>
    <label>Merchandise Account Balance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>