force-app/main/default/objects/Quote/fields/MachineMonthlyPurchasQuantityCoffee__c.field-meta.xml
<CustomField>
    <fullName>MachineMonthlyPurchasQuantityCoffee__c</fullName>
    <formula>MachineSalesExpectationCoffee__c / MachineRuntimeInMonths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Purchase Quantity Coffee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>