force-app/main/default/objects/Quote/fields/MachineMonthlyRateInEuro__c.field-meta.xml
<CustomField>
    <fullName>MachineMonthlyRateInEuro__c</fullName>
    <label>Monthly Rate In Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>