force-app/main/default/objects/Quote/fields/MachineNetAmount__c.field-meta.xml
<CustomField>
    <fullName>MachineNetAmount__c</fullName>
    <label>Net Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>