force-app/main/default/objects/Quote/fields/MachineNetRevenueCurrentYear__c.field-meta.xml
<CustomField>
    <fullName>MachineNetRevenueCurrentYear__c</fullName>
    <label>Net Revenue Current Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>