force-app/main/default/objects/Quote/fields/MachineNetRevenueLastYear__c.field-meta.xml
<CustomField>
    <fullName>MachineNetRevenueLastYear__c</fullName>
    <label>Net Revenue Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>