force-app/main/default/objects/Quote/fields/MachineNotesOnTheContract__c.field-meta.xml
<CustomField>
    <fullName>MachineNotesOnTheContract__c</fullName>
    <label>Notes on the Contract</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>