force-app/main/default/objects/Quote/fields/MachineOrderCase__c.field-meta.xml
<CustomField>
    <fullName>MachineOrderCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Quotes (Order Case)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>