force-app/main/default/objects/Quote/fields/MachineProducerDiscountTotalInEuro__c.field-meta.xml
<CustomField>
    <fullName>MachineProducerDiscountTotalInEuro__c</fullName>
    <label>Machine Producer Discount Total in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>