force-app/main/default/objects/Quote/fields/MachineProducerDiscountTotalPercent__c.field-meta.xml
<CustomField>
    <fullName>MachineProducerDiscountTotalPercent__c</fullName>
    <label>Machine Producer Discount Total Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>