force-app/main/default/objects/Quote/fields/MachineQL1Discount__c.field-meta.xml
<CustomField>
    <fullName>MachineQL1Discount__c</fullName>
    <label>#Machine QL 1 Discount</label>
    <summaryFilterItems>
        <field>QuoteLineItem.IsMachine1Discount__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>