force-app/main/default/objects/Quote/fields/MachineQL2Discounts__c.field-meta.xml
<CustomField>
    <fullName>MachineQL2Discounts__c</fullName>
    <label>#Machine QL 2 Discounts</label>
    <summaryFilterItems>
        <field>QuoteLineItem.IsMachine2Discounts__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>