force-app/main/default/objects/Quote/fields/MachineRecommendationMachineTeam__c.field-meta.xml
<CustomField>
    <fullName>MachineRecommendationMachineTeam__c</fullName>
    <label>Machine Recommendation Machine Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>