force-app/main/default/objects/Quote/fields/MachineRentalAgreementEuroPerKG__c.field-meta.xml
<CustomField>
    <fullName>MachineRentalAgreementEuroPerKG__c</fullName>
    <label>Rental Agreement (Euro/kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>