force-app/main/default/objects/Quote/fields/MachineRoasterDiscountTotalInEuro__c.field-meta.xml
<CustomField>
    <fullName>MachineRoasterDiscountTotalInEuro__c</fullName>
    <label>Machine Roaster Discount Total in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>