force-app/main/default/objects/Quote/fields/MachineRuntimeInMonths__c.field-meta.xml
<CustomField>
    <fullName>MachineRuntimeInMonths__c</fullName>
    <label>Runtime In Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>