force-app/main/default/objects/Quote/fields/MachineRuntimeMinus1Day__c.field-meta.xml
<CustomField>
    <fullName>MachineRuntimeMinus1Day__c</fullName>
    <formula>MachineRuntimeInMonths__c-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Runtime minus 1 day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>