force-app/main/default/objects/Quote/fields/MachineSalesExpectationCoffee__c.field-meta.xml
<CustomField>
    <fullName>MachineSalesExpectationCoffee__c</fullName>
    <label>Sales Expectation Coffee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>