force-app/main/default/objects/Quote/fields/MachineSalesExpectationCoffeeperYear__c.field-meta.xml
<CustomField>
    <fullName>MachineSalesExpectationCoffeeperYear__c</fullName>
    <formula>IF( MachineRuntimeInMonths__c  &gt; 0, MachineSalesExpectationCoffee__c  /  MachineRuntimeInMonths__c  * 12,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Expectation Coffee  (in kg) per Ye</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>