force-app/main/default/objects/Quote/fields/MachineSEPABankName__c.field-meta.xml
<CustomField>
    <fullName>MachineSEPABankName__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>