force-app/main/default/objects/Quote/fields/MachineSEPABIC__c.field-meta.xml
<CustomField>
    <fullName>MachineSEPABIC__c</fullName>
    <label>BIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>