force-app/main/default/objects/Quote/fields/MachineSEPAIBAN__c.field-meta.xml
<CustomField>
    <fullName>MachineSEPAIBAN__c</fullName>
    <label>IBAN</label>
    <type>TextArea</type>
</CustomField>