force-app/main/default/objects/Quote/fields/MachineSEPAName__c.field-meta.xml
<CustomField>
    <fullName>MachineSEPAName__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>