force-app/main/default/objects/Quote/fields/MachineSEPAStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>MachineSEPAStreetNumber__c</fullName>
    <label>Street / Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>