force-app/main/default/objects/Quote/fields/MachineSEPAZipCity__c.field-meta.xml
<CustomField>
    <fullName>MachineSEPAZipCity__c</fullName>
    <label>Zip / City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>