force-app/main/default/objects/Quote/fields/MachineSpecialQL1Discount__c.field-meta.xml
<CustomField>
    <fullName>MachineSpecialQL1Discount__c</fullName>
    <label># Machine (Special) QL 1 Discount</label>
    <summaryFilterItems>
        <field>QuoteLineItem.IsSpecialMachine1Discount__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>