force-app/main/default/objects/Quote/fields/MachineSpecialQL2Discounts__c.field-meta.xml
<CustomField>
    <fullName>MachineSpecialQL2Discounts__c</fullName>
    <label># Machine (Special) QL 2 Discounts</label>
    <summaryFilterItems>
        <field>QuoteLineItem.IsSpecialMachine2Discounts__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>