force-app/main/default/objects/Quote/fields/MachineSubtotal__c.field-meta.xml
<CustomField>
    <fullName>MachineSubtotal__c</fullName>
    <label>Subtotal</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>