force-app/main/default/objects/Quote/fields/MachineSumMachineValues__c.field-meta.xml
<CustomField>
    <fullName>MachineSumMachineValues__c</fullName>
    <formula>MachineMachineAccountBalance__c +  MachineNetAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum Machine Values</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>