force-app/main/default/objects/Quote/fields/MachineSurchargeCalculation__c.field-meta.xml
<CustomField>
    <fullName>MachineSurchargeCalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surcharge Calculation</label>
    <type>Checkbox</type>
</CustomField>