force-app/main/default/objects/Quote/fields/MachineTotalAmountIncludingTax__c.field-meta.xml
<CustomField>
    <fullName>MachineTotalAmountIncludingTax__c</fullName>
    <label>Total Amount Including Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>